Add black hole tap to feed
